--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".ui.HotelListActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.WebActivity"
             android:exported="false" />
         <activity
@@ -27,7 +30,7 @@
             android:name=".ui.HomeActivity"
             android:exported="false"
             android:label="@string/title_activity_home"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.LoginActivity"
             android:exported="false" />
